 * Many things which listed attributes from a parent, like lattrp() or
   examine/parent, didn't respect no_inherit fully. [MG]
 * Minor crashbug in @boot fixed. Reported by thomaswdyoung. [MG]
 * @grep now ignores ansi when looking for a value. Suggested by Mouvar. [MG]
 * colors() now complains when the color is 'n', 'd' or 'D', since they
   have no actual color value. Reported by spork. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]
 * New substitution, %k, returns the enactor's monikered name. [MUX] [MG]
 * Help fixes and tweaks. [MG]
 * PennMUSH can now read MUX-style passwords, to make moving dbs from MUX
   to Penn less painful. Requested by Muse. [MG]
 * Commands are no longer queued for HALTed non-players. (Since they'd be
   dropped from the queue anyway, rather than being run, it saves us jumping
   through a series of hoops for no good reason.) From a report by Muse and
   Ashen-Shugar. [MG]
 * The connect-screen WHO now shows moniker'd (ansi'd) names, if so 
   configured. Requested by Trinsec. [MG]
 * @mapsql and mapsql()'s attributes now receives named arguments. That is,
   '@mapsql me/foo=SELECT name FROM table' receives the value of the 'name'
   field as both %1 and [r(name,args)]. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]
 * moniker(<object>) returns an objects monikered name. [MUX] [MG]
 * mapsql() only stored 10 columns, instead of the advertised 30. Reported
   by Mercutio. [MG]
 * fn() now takes an <obj>/ prefix to its first arg, to evaluate the built-in
   function as <obj>. Useful when overriding side-effect functions. [MG]