@@ -48,6 +48,7 @@ Fixes:
  * @grep now ignores ansi when looking for a value. Suggested by Mouvar. [MG]
  * colors() now complains when the color is 'n', 'd' or 'D', since they
    have no actual color value. Reported by spork. [MG]
+ * Buffer overflow bug in ansi() fixed. Reported by spork. [MG]
 
 Minor changes:
  * strreplace() now works harder to keep existing ANSI intact, when you
